# haskify

./: README.md  haskify.cabal  makefile  todo  types.txt
ex/get-skus/: Main.hs
ex/post-product/: Main.hs
schema/: DataFields.txt  Singleton.txt
schema/data/: ApplicationCharge.txt  Article.txt  Asset.txt  Blog.txt  CarrierService.txt  CarrierServiceItem.txt  CarrierServiceLocation.txt  CarrierServiceRate.txt  CarrierServiceRequest.txt  Collect.txt  Comment.txt  Country.txt  CustomCollection.txt  Customer.txt  CustomerAddress.txt  FulfillmentService.txt  Image.txt  Location.txt  Metafield.txt  Page.txt  Policy.txt  Product.txt  ProductImage.txt  ProductVariant.txt  Province.txt  Redirect.txt  Rule.txt  ScriptTag.txt  SmartCollection.txt  Theme.txt  Transaction.txt  UsageCharge.txt
schema/opt/: GetBlogsIDArticlesCountOpt.txt  GetBlogsIDArticlesOpt.txt  GetBlogsIDArticlesTagsOpt.txt  GetBlogsOpt.txt  GetMetafieldsOpt.txt  GetProductsCountOpt.txt  GetProductsIDOpt.txt  GetProductsIDVariantsOpt.txt  GetProductsOpt.txt
schema/value/: ApplicationChargeStatus.txt  ApplicationChargeTest.txt  CarrierServiceType.txt  Column.txt  Commentable.txt  CustomerState.txt  DOMEvent.txt  DisplayScope.txt  Format.txt  InventoryManagement.txt  InventoryPolicy.txt  PaymentDetails.txt  PublishedScope.txt  PublishedStatus.txt  Relation.txt  ShipmentStatus.txt  SortOrder.txt  ThemeRole.txt  TransactionErrorCode.txt  TransactionKind.txt  TransactionReceipt.txt  TransactionStatus.txt  ValueType.txt
src/: Haskify.hs
src/Haskify/: Data.hs  DataFields.hs  Endpoint.hs  HaskifyM.hs  JSON.hs  Opt.hs  Singleton.hs  ToURL.hs  Types.hs  Value.hs
src/Haskify/Data/: ApplicationCharge.hs  Article.hs  Asset.hs  Blog.hs  CarrierService.hs  CarrierServiceItem.hs  CarrierServiceLocation.hs  CarrierServiceRate.hs  CarrierServiceRequest.hs  Collect.hs  Comment.hs  Country.hs  CustomCollection.hs  Customer.hs  CustomerAddress.hs  FulfillmentService.hs  Image.hs  Location.hs  Metafield.hs  Page.hs  Policy.hs  Product.hs  ProductImage.hs  ProductVariant.hs  Province.hs  Redirect.hs  Rule.hs  ScriptTag.hs  SmartCollection.hs  Theme.hs  Transaction.hs  UsageCharge.hs
src/Haskify/Endpoint/: Article.hs  Blog.hs  CarrierService.hs  Metafield.hs  Product.hs  ProductVariant.hs
src/Haskify/Opt/: GetBlogsIDArticlesCountOpt.hs  GetBlogsIDArticlesOpt.hs  GetBlogsIDArticlesTagsOpt.hs  GetBlogsOpt.hs  GetMetafieldsOpt.hs  GetProductsCountOpt.hs  GetProductsIDOpt.hs  GetProductsIDVariantsOpt.hs  GetProductsOpt.hs
src/Haskify/Value/: ApplicationChargeStatus.hs  ApplicationChargeTest.hs  CarrierServiceType.hs  Column.hs  CommentPolicy.hs  Commentable.hs  CustomerState.hs  DOMEvent.hs  DisplayScope.hs  Format.hs  InventoryManagement.hs  InventoryPolicy.hs  PaymentDetails.hs  PublishedScope.hs  PublishedStatus.hs  Relation.hs  ShipmentStatus.hs  SortOrder.hs  ThemeRole.hs  TransactionErrorCode.hs  TransactionKind.hs  TransactionReceipt.hs  TransactionStatus.hs  ValueType.hs
test/: HaskifyTest.hs  Main.hs
test/HaskifyTest/: Endpoint.hs  Util.hs
test/HaskifyTest/Endpoint/: Metafield.hs  Product.hs
